--- a/_posts/2018-08-10-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
+++ b/_posts/2018-08-10-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
@@ -35,7 +35,7 @@ tags:								#标签
 找到`Host`文件，使用自带记事本打开，或者使用 [notepad++](https://notepad-plus-plus.org/) 文本编辑器等。
 
 #### 第二步
-在Host文件内，尾部添加以下内容，随后保存。
+在Host文件内，尾部添加以下内容，然后保存。
 ```
 104.16.59.5 discordapp.com
 104.16.59.5 dl.discordapp.net    
@@ -48,7 +48,7 @@ tags:								#标签
 #### 第三步
 重新打开Discord登陆。
 ```
-若只显示“欢迎，哔啵哔啵”而没有任何选项，跟进补充。
+若只显示“欢迎，哔啵哔啵”而没有任何选项，则跟进补充。
 该方法大概是利用Web登入跳过PC Discord的CAPTCHA验证。
 ```
 
