--- a/_posts/2018-08-10-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
+++ b/_posts/2018-08-10-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
@@ -48,7 +48,7 @@ tags:								#标签
 #### 第三步
 重新打开Discord登陆。
 ```
-若只显示“欢迎，哔啵哔啵”而没有任何选项，则跟进补充。
+若只显示“欢迎回来！哔啵。啵哔？”而没有任何选项，则跟进补充。
 该方法大概是利用Web登入跳过PC Discord的CAPTCHA验证。
 ```
 
