--- a/_posts/2018-08-11-C-plus-plus-关键字记录-2018.md
+++ b/_posts/2018-08-11-C-plus-plus-关键字记录-2018.md
@@ -11,8 +11,13 @@ tags:								#标签
 ---
 
 ## cctype 中的字符函数
+
 | 函数名称 | 返回值 |
-| :--------- | :--------- |
+| :----- | :----- |
+| dc | asd |
+
+| 函数名称 | 返回值 |
+| :----- | :----- |
 | isalnum()  | 如果`参数`是`字母数字`, 即`字母`或`数字`, 该函数返回`true` |
 | isalpha()  | 如果`参数`是`字母`, 该函数返回`true` |
 | iscntel()  | 如果`参数`是`控制字符`, 该函数返回`true` |
