--- a/_posts/2018-09-30-烟雾盒子-笔记a3-2018.md
+++ b/_posts/2018-09-30-烟雾盒子-笔记a3-2018.md
@@ -10,10 +10,10 @@ tags:								#标签
     - 生活
 ---
 ## 记录
-转眼间，今年已经度过了_**九个月**_，明年不再远。
+转眼间，今年已经度过了__**九个月**__，明年不再远。
 
 八月份补课，九月份开学，匆匆忙忙掠过，再有百天时间就将毕业离校。<br>
 对于离开某一个地方，我的心里平静的像一滩死水。<br>
 说起来还挺符合我当下的愿望...
 
->~~假装~~毫不留情的离去，永远的不再回来。<br>
+>~~假装~~ 毫不留情的离去，永远的不再回来。<br>
