--- a/_posts/2018-09-30-烟雾盒子-笔记a3-2018.md
+++ b/_posts/2018-09-30-烟雾盒子-笔记a3-2018.md
@@ -12,7 +12,7 @@ tags:								#标签
 ## a3记录
 转眼间，今年已经度过了**<u>九个月</u>**，明年不再远。
 
-八月份补课，九月份开学，匆匆忙忙掠过，再有百天时间就将毕业离校。<br>
+八月份补习，九月份开学，匆匆忙忙掠过，再有百天时间就将毕业离校。<br>
 对于离开某一个地方，我的心里平静的像一滩死水。<br>
 说起来还挺符合我当下的愿望...
 
