--- a/_posts/2018-09-30-烟雾盒子-笔记a3-2018.md
+++ b/_posts/2018-09-30-烟雾盒子-笔记a3-2018.md
@@ -7,7 +7,7 @@ author:     Feng 						# 作者
 header-img: img/poat-crack.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
-    - 生活
+    - 烟雾盒子
 ---
 ## a3记录
 转眼间，今年已经度过了**<u>九个月</u>**，明年不再远。
