--- a/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
+++ b/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
 title:      修改HOST解决Discord登陆、更新、加载、图片的问题 				# 标题
-subtitle:   分享解决方法 #副标题
+subtitle:    #副标题
 date:       2018-08-11 				# 时间
 author:     Feng 						# 作者
 header-img: img/Discord-Logo+Wordmark-White.png 	#这篇文章标题背景图片
