--- a/_posts/2018-08-10-很高兴认识你-2018.md
+++ b/_posts/2018-08-10-很高兴认识你-2018.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
-title:      很高兴认识你 				# 标题
-subtitle:   Hello #副标题
+title:      很高兴认识你 	  		# 标题
+subtitle:                     #副标题
 date:       2018-08-10 				# 时间
 author:     Feng 						# 作者
 header-img: img/post-bg-desk.jpg 	#这篇文章标题背景图片
