--- a/_posts/2018-08-11-C-plus-plus-关键字记录-2018.md
+++ b/_posts/2018-08-11-C-plus-plus-关键字记录-2018.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
 title:      C plus plus 关键字记录 				# 标题
-subtitle:   学习记录 #副标题
+subtitle:    #副标题
 date:       2018-08-11 				# 时间
 author:     Feng 						# 作者
 header-img: img/Discord-Logo+Wordmark-White.png 	#这篇文章标题背景图片
