--- a/_posts/2018-10-01-国庆六十九周年-2018.md
+++ b/_posts/2018-10-01-国庆六十九周年-2018.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
 title:      国庆六十九周年 				# 标题
-subtitle:   China #副标题
+subtitle:    #副标题
 date:       2018-10-01 				# 时间
 author:     Feng 						# 作者
 header-img: img/post-china-69-anniversary.png 	#这篇文章标题背景图片
