--- a/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
+++ b/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
@@ -1,6 +1,6 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
-title:      修改HOST解决Discord登陆、更新、加载、图片的问题 				# 标题
+title:      解决Discord登陆、更新、加载、图片的问题 				# 标题
 subtitle:    #副标题
 date:       2018-08-11 				# 时间
 author:     Feng 						# 作者
@@ -13,7 +13,8 @@ tags:								#标签
 ## 前言
 ![Discord](https://discordapp.com/assets/9babbea9acbfec5302d832bae6c3c184.svg)
 适用于游戏玩家的一体化语音和文字聊天，免费，安全，可在桌面和手机使用。<br>
-下载：[Windows](https://discordapp.com/api/download?platform=win)、[Mac](https://discordapp.com/api/download?platform=osx)、[Linux](https://discordapp.com/api/download?platform=linux&format=deb)|[开启 Web Discord](https://discordapp.com/channels/@me)
+官网：[https://discordapp.com/](https://discordapp.com/)<br>
+下载：[Windows](https://discordapp.com/api/download?platform=win)([度盘](https://pan.baidu.com/s/1Yg_FgrrU3XbEg3C9Rj-7ug))、[Mac](https://discordapp.com/api/download?platform=osx)、[Linux](https://discordapp.com/api/download?platform=linux&format=deb)|[开启 Web Discord](https://discordapp.com/channels/@me)
 
 
 ### 好处
@@ -31,11 +32,11 @@ tags:								#标签
 
 ### Win系统下，修改Host解决Discord登陆、跟新、加载、图片
 #### 第一步
-打开路径`C:\Windows\System32\drivers\etc\`<br>
-找到`Host`文件，使用自带记事本打开，或者使用 [notepad++](https://notepad-plus-plus.org/) 文本编辑器等。
+找到电脑上的host文件，使用电脑自带记事本打开。<br>
+Win路径：C:\windows\System32\drivers\etc\
 
 #### 第二步
-在Host文件内，尾部添加以下内容，然后保存。
+Host文件末尾，添加以下内容，然后保存。
 ```
 104.16.59.37 discordapp.com
 104.16.59.37 dl.discordapp.net
@@ -48,7 +49,7 @@ tags:								#标签
 ```
 
 #### 第三步
-重新打开Discord登陆。
+重新打开Discord客户端。
 ```
 若只显示“欢迎回来！哔啵。啵哔？”而没有任何选项，则跟进补充。
 该方法大概是利用Web登入跳过PC Discord的CAPTCHA验证。
@@ -57,9 +58,11 @@ tags:								#标签
 #### 补充
 1、打开PC Discord，点击忘记密码。（Discord将发送一则修改密码邮件）<br>
 2、找到由 Discord 发送的修改密码邮件，打开链接修改密码。<br>
-3、修改完成后，会进入[Web Discord](https://discordapp.com/channels/@me)。<br>
-4、重新开启PC Discord完成PC登陆。
+3、修改完成后，会进入的Discord[Web](https://discordapp.com/channels/@me)页面。<br>
+4、重新开启Discord客户端完成登陆。
 
 ## 结尾
-好啦，希望能帮到你们。<br>
-[Cyyou！官方聊天室](https://discordapp.com/invite/uaQfDnz) 是我在 Discord 申请创建的 Server ，欢迎加入。
+Host随时可能会失效，最好的办法还是自己备个工具吧。
+希望有所帮助。<br>
+欢迎加入我的Server!
+[Cyyou! 官方聊天室](https://discordapp.com/invite/uaQfDnz) :[uaQfDnz](https://discordapp.com/invite/uaQfDnz)
