--- a/_posts/2019-01-14-TEST-2019.md
+++ b/_posts/2019-01-14-TEST-2019.md
@@ -1,8 +1,8 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
-title:      很高兴认识你 	  		# 标题
+title:      TST 	  		# 标题
 subtitle:                     #副标题
-date:       2018-08-10 				# 时间
+date:       2019-01-14 				# 时间
 author:     Feng 						# 作者
 header-img: img/post-bg-desk.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
