--- a/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
+++ b/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
@@ -62,7 +62,7 @@ Host文件末尾，添加以下内容，然后保存。
 4、重新开启Discord客户端完成登陆。
 
 ## 结尾
-Host随时可能会失效，最好的办法还是自己备个工具吧。
+Host随时可能会失效，最好的办法还是自己备个工具吧。<br>
 希望有所帮助。<br>
-欢迎加入我的Server!
+欢迎加入我的Server!<br>
 [Cyyou! 官方聊天室](https://discordapp.com/invite/uaQfDnz) :[uaQfDnz](https://discordapp.com/invite/uaQfDnz)
