--- a/_posts/2019-01-14-TEST-2019.md
+++ b/_posts/2019-01-14-TEST-2019.md
@@ -1,11 +1,11 @@
 ---
-layout:     post   				    # Ê¹ÓÃµÄ²¼¾Ö£¨²»ĞèÒª¸Ä£©
-title:      TST 	  		# ±êÌâ
-subtitle:                     #¸±±êÌâ
-date:       2019-01-14 				# Ê±¼ä
-author:     Feng 						# ×÷Õß
-header-img: img/post-bg-desk.jpg 	#ÕâÆªÎÄÕÂ±êÌâ±³¾°Í¼Æ¬
-catalog: true 						# ÊÇ·ñ¹éµµ
-tags:								#±êÇ©
-    - Éú»î
+layout:     post   				    # ä½¿ç”¨çš„å¸ƒå±€ï¼ˆä¸éœ€è¦æ”¹ï¼‰
+title:      TST 	  		# æ ‡é¢˜
+subtitle:                     #å‰¯æ ‡é¢˜
+date:       2019-01-14 				# æ—¶é—´
+author:     Feng 						# ä½œè€…
+header-img: img/post-bg-desk.jpg 	#è¿™ç¯‡æ–‡ç« æ ‡é¢˜èƒŒæ™¯å›¾ç‰‡
+catalog: true 						# æ˜¯å¦å½’æ¡£
+tags:								#æ ‡ç­¾
+    - ç”Ÿæ´»
 ---
