--- a/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
+++ b/_posts/2018-08-11-修改-HOST-解决-Discord-的登陆更新加载图片问题-2018.md
@@ -10,14 +10,14 @@ tags:								#标签
     - 实用
 ---
 
-## 前言
+# 前言
 ![Discord](https://discordapp.com/assets/9babbea9acbfec5302d832bae6c3c184.svg)
 适用于游戏玩家的一体化语音和文字聊天，免费，安全，可在桌面和手机使用。<br>
 官网：[https://discordapp.com/](https://discordapp.com/)<br>
 下载：[Windows](https://discordapp.com/api/download?platform=win)([度盘](https://pan.baidu.com/s/1Yg_FgrrU3XbEg3C9Rj-7ug))、[Mac](https://discordapp.com/api/download?platform=osx)、[Linux](https://discordapp.com/api/download?platform=linux&format=deb)|[开启 Web Discord](https://discordapp.com/channels/@me)
 
 
-### 好处
+## 好处
 1、频道功能，可以多频道讨论，互不干涉。<br>
 2、语音功能，可以多人语音，便捷的语音通讯。<br>
 3、聊天功能，优异的聊天能力，At用户，跳转频道，TSS文字，再次修改讯息，删除等。<br>
@@ -26,16 +26,16 @@ tags:								#标签
 6、多平台，支持`Web`，`Win`，`Mac`，`Linux`，`Android`，`IOS`。<br>
 8、多语言，支持27种语言，包括简中，繁中，English等。
 
-### 坏处
+## 坏处
 > 由于在18年7月13日郭文贵狂热粉丝用于在战友之声频道进行路德社郭文贵实况语音转播。<br>
 > 导致Discord在境内被封锁，使用Discord全程需要科学上网或者修改Host。
 
-### Win系统下，修改Host解决Discord登陆、跟新、加载、图片
-#### 第一步
+## Win系统下，修改Host解决Discord登陆、跟新、加载、图片
+### 第一步
 找到电脑上的host文件，使用电脑自带记事本打开。<br>
 Win路径：C:\windows\System32\drivers\etc\
 
-#### 第二步
+### 第二步
 Host文件末尾，添加以下内容，然后保存。
 ```
 104.16.59.37 discordapp.com
@@ -48,20 +48,20 @@ Host文件末尾，添加以下内容，然后保存。
 104.16.59.37 images-ext-1.discordapp.net    
 ```
 
-#### 第三步
+### 第三步
 重新打开Discord客户端。
 ```
 若只显示“欢迎回来！哔啵。啵哔？”而没有任何选项，则跟进补充。
 该方法大概是利用Web登入跳过PC Discord的CAPTCHA验证。
 ```
 
-#### 补充
+### 补充
 1、打开PC Discord，点击忘记密码。（Discord将发送一则修改密码邮件）<br>
 2、找到由 Discord 发送的修改密码邮件，打开链接修改密码。<br>
 3、修改完成后，会进入的Discord[Web](https://discordapp.com/channels/@me)页面。<br>
 4、重新开启Discord客户端完成登陆。
 
-## 结尾
+# 结尾
 Host随时可能会失效，最好的办法还是自己备个工具吧。<br>
 希望有所帮助。<br>
 欢迎加入我的Server!<br>
