--- a/_posts/2021-03-05-SSHKey的相关使用.md
+++ b/_posts/2021-03-05-SSHKey的相关使用.md
@@ -5,7 +5,7 @@ subtitle:
 date: 2021-03-05
 author: Feng0139
 header-img: img/post-bg-desk.jpg
-catalog: false
+catalog: true
 tags:
     - SSH
 ---
